# Asset-Allocation-Model

./: README.md
aa_engine/: .gitignore  .pre-commit-config.yaml  AA_Engine_Decisions_Log.docx  AA_Engine_Objectives_and_Guardrails.docx  README.md  pyproject.toml
aa_engine/aa_engine/: __init__.py  cli.py
aa_engine/aa_engine/backtest/: costs.py  engine.py  metrics.py
aa_engine/aa_engine/features/: macro.py  price.py  regimes.py
aa_engine/aa_engine/models/: diagnostics.py  optimize.py  tuning.py  xgb_forecaster.py
aa_engine/aa_engine/portfolio/: bl_core.py  optimizers.py
aa_engine/aa_engine/utils/: io.py  logging.py  seeds.py  time.py
aa_engine/configs/: backtest.yaml  forecaster.yaml  portfolio.yaml
aa_engine/experiments/: part1_forecaster_run.py  part1_live_smoke.py  part1_tune_and_run.py  probe_yf_single.py
aa_engine/tests/: test_features_price.py  test_models_xgb.py
